# embedded_stuff

./: .env.example  .gitignore  LICENSE  README.md
C/: .gitignore
C/blink_led/: CMakeLists.txt
C/blink_led/main/: main.c
C/bme280_server/: CLAUDE.md  CMakeLists.txt  sdkconfig
C/bme280_server/main/: CMakeLists.txt  bme280_sensor.c  bme280_sensor.h  bme280_server.c  data_poster.c  data_poster.h  http_client.c  http_client.h  http_server.c  http_server.h  idf_component.yml  led_status.c  led_status.h  sensor_reading.options  sensor_reading.pb.c  sensor_reading.pb.h  sensor_reading.proto  weather_server.c  wifi_manager.c  wifi_manager.h
C/frankensensor/: .gitignore  .project  CLAUDE.md  Makefile  STM32F439XX_FLASH.ld  frankensensor.ioc
C/frankensensor/Core/Inc/: gps.h  main.h  nmea_parser.h  stm32f4xx_it.h
C/frankensensor/Core/Src/: freertos.c  gps.c  i2c.c  main.c  nmea_parser.c  stm32f4xx_it.c
C/frankensensor/Tests/: Makefile  test_nmea_parser  test_nmea_parser.c
C/freeCodeCamp/: .gitignore  main.c
C/hello_world/: sdkconfig  sdkconfig.old
C/playground/: .gitignore  build.sh  ring_buffer  ring_buffer.c
C/rotary_encoder/: CMakeLists.txt
C/rotary_encoder/main/: rotary_encoder.c
CPP/blink_led/: CLAUDE.md  README.md  sdkconfig
CPP/blink_led/main/: main.cpp
CPP/ros2_playground/: .gitignore  README.md
CPP/ros2_playground/.devcontainer/: Dockerfile  devcontainer.json
CPP/ros2_playground/src/my_first_pkg/: CMakeLists.txt  package.xml
CPP/ros2_playground/src/my_first_pkg/launch/: data_logger.launch.py
CPP/ros2_playground/src/my_first_pkg/src/: camera_node.cpp  data_logger.cpp  gps_node.cpp  my_node.cpp
Python/blink_led/: README.md  deploy.sh  main.py
Python/hello_world/: README.md  bme280.py  deploy.sh  main.py  pyrightconfig.json  requirements.txt  sh1107.py  wifi_secrets.pyi
Rust/blink_led/: Cargo.toml  README.md
Rust/blink_led/src/: main.rs
Rust/bme280_sender/: Cargo.toml  README.md  build.rs  build.sh  flash.sh  monitor.sh  sdkconfig.defaults
Rust/bme280_sender/proto/: sensor_reading.proto
Rust/bme280_sender/src/: main.rs
Rust/fitness-tracker/: CLAUDE.md  Cargo.toml  diagram.json  sdkconfig.defaults  wokwi.toml
Rust/fitness-tracker/.cargo/: config.toml
Rust/fitness-tracker/.devcontainer/: Dockerfile  devcontainer.json
Rust/fitness-tracker/.github/workflows/: rust_ci.yml
Rust/fitness-tracker/docs/: README.md  architecture.drawio
Rust/fitness-tracker/scripts/: flash.sh
Rust/fitness-tracker/src/: main.rs  queue.rs
Rust/fitness-tracker/src/tasks/: Fitness_Tracker_FreeRTOS_Tasks.drawio  fake_gps.rs  gps.rs  gps_acquisition.rs  gps_aggregator.rs  mod.rs  sd_card.rs  sh1107.rs  task1.rs  task2.rs  user_display.rs
Rust/fitness-tracker/testable-logic/: Cargo.toml
Rust/fitness-tracker/testable-logic/src/: gps_join.rs  gps_sentence_joining.rs  lib.rs
Rust/fitness_tracker_embassy/: CLAUDE.md  Cargo.toml
Rust/fitness_tracker_embassy/.cargo/: config.toml
Rust/fitness_tracker_embassy/src/domain/: Cargo.toml
Rust/fitness_tracker_embassy/src/domain/src/: display_content.rs  gps_stuff.rs  lib.rs
Rust/fitness_tracker_embassy/src/fitness_tracker/: display.rs  main.rs  sh1107.rs
Rust/fitness_tracker_embassy/src/fitness_tracker/tasks/: display.rs  fake_gps.rs  gps_acquisition.rs  gps_aggregator.rs  mod.rs  sd_card.rs  usb_otg_logger.rs
Rust/inertial_display/: Cargo.toml  README.md
Rust/inertial_display/src/: accelerometer.rs  display.rs  main.rs
Rust/playground/: README.md
Rust/playground/ring_buffer/src/: main.rs
